force-app/main/default/objects/Key_Client_Contact__c/Key_Client_Contact__c.object-meta.xml
<CustomObject>
    <description>This object stores the info of important contacts related with a client.</description>
    <label>Key Client Contact</label>
    <nameField>
        <label>Key Client Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Client Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>