force-app/main/default/objects/Key_Client_Contact__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related client with the record.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Key Client Contacts</relationshipLabel>
    <relationshipName>Key_Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>