force-app/main/default/objects/Key_Client_Contact__c/fields/Client_Plan__c.field-meta.xml
<CustomField>
    <fullName>Client_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client Plan for which the contact is associated.</description>
    <label>Client Plan</label>
    <referenceTo>Client_Plan__c</referenceTo>
    <relationshipLabel>Key Client Contacts</relationshipLabel>
    <relationshipName>Key_Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>