force-app/main/default/objects/Key_Client_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related contact</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Client Contacts</relationshipLabel>
    <relationshipName>Key_Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>